fix repeated posts in the index cool stuff

--- a/resources/testpage.html
+++ b/resources/testpage.html
@@ -45,6 +45,31 @@ may rise and fall due to random factors beyond our control, but we will construc
 
 </article>
 
+<article>
+    <h3>Day One</h3>
+
+    <p>Every story has a beginning and here is mine.  I've been writing non-fiction pretty much
+        since my career in software began, but I've never written much fiction until recently. I'm not quite
+        sure <b>why</b> I decided to start now, but I know it has something to do with my desire to stop the
+        bad things in the world from happening.</p>
+
+    <p>You see, in my day job I work on bringing VR and AR technology to the world. I'm really excited
+        about the potential of these technologies, but I also have to be honest, there may be some terrifying
+        side effects. I've realized (or at least 'come to believe') that one good way to spread ideas is through
+        stories. </p>
+
+    <div class="standalone">
+        <a href="https://xkcd.com/904/">
+            <img alt="Let's construct a narrative" src="https://imgs.xkcd.com/comics/sports.png">
+        </a>
+    </div>
+
+    <p>Humans are social status seeking monkeys. Part of that means we think in terms of stories. The stock market
+        may rise and fall due to random factors beyond our control, but we will construct a narrative around it anyway
+        about bull and bear markets.  We humans <b>really</b> like stories.</p>
+
+</article>
+
 <footer>
     <a href="mailto:josh@josh.earth">josh@josh.earth</a>
 </footer>
