add header and footer templates make a common search and replace function

--- a/resources/post.html
+++ b/resources/post.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-<header>
-    <h1 class="title">Josh Marinacci's Lab</h1>
-    <h2 class="subtitle">Constructing sci-fi humorist writings</h2>
-</header>
+<header></header>
 
 <aside>
     <h3>get notified!</h3>
@@ -19,16 +16,9 @@
     </p>
 </aside>
 
-<!-- need to push this to the bottom
-<footer>
-    <a href="mailto:josh@josh.earth">josh@josh.earth</a>
-</footer>
--->
+<article></article>
 
-<article>
-
-</article>
-
+<footer></footer>
 
 
 </body>
