add fonts and logo and more styling

--- a/resources/header.html
+++ b/resources/header.html
@@ -1,4 +1,4 @@
 <header>
-    <h1 class="title">Josh Marinacci's Lab</h1>
-    <h2 class="subtitle">Constructing sci-fi humorist writings</h2>
+    <h1 class="title">The Lab</h1>
+    <h2 class="subtitle">experimental sci-fi humorist writings</h2>
 </header>
