--- a/resources/index.html
+++ b/resources/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<img id="logo" src="./sign.small.png">
+
 <header></header>
 
 <aside>
@@ -14,6 +16,9 @@
     <p>If you want to be notified when I publish new posts, or when my stories get published,
         <a href="#">please subscribe</a>.
     </p>
+    <ul>
+        <li><a href="./2019-08-13/bio.html">About Me</a></li>
+    </ul>
 </aside>
 
 <main></main>
