--- a/resources/testpage.html
+++ b/resources/testpage.html
@@ -7,21 +7,17 @@
 </head>
 <body>
 
+<img id="logo" src="./sign.png">
+
 <header>
-<h1 class="title">Josh Marinacci's Lab</h1>
-<h2 class="subtitle">Constructing sci-fi humorist writings</h2>
+    <h1 class="title">The Lab</h1>
+    <h2 class="subtitle">experimental sci-fi humorist writings</h2>
 </header>
 
-<aside>
-    <h3>get notified!</h3>
-    <p>If you want to be notified when I publish new posts, or when my stories get published,
-        <a href="#">please subscribe</a>.
-    </p>
-</aside>
-
-
+<main>
 <article>
-<h3>Day One</h3>
+    <h3>Day One</h3>
+    <h4>2019-08-16</h4>
 
 <p>Every story has a beginning and here is mine.  I've been writing non-fiction pretty much
 since my career in software began, but I've never written much fiction until recently. I'm not quite
@@ -43,6 +39,7 @@ stories. </p>
 may rise and fall due to random factors beyond our control, but we will construct a narrative around it anyway
     about bull and bear markets.  We humans <b>really</b> like stories.</p>
 
+    <p>read <a href="#">the rest ...</a></p>
 </article>
 
 <article>
@@ -69,6 +66,22 @@ may rise and fall due to random factors beyond our control, but we will construc
         about bull and bear markets.  We humans <b>really</b> like stories.</p>
 
 </article>
+</main>
+
+
+<aside>
+    <h3>Info</h3>
+    <ul>
+        <li>
+            <a href="about.html">About Me</a>
+        </li>
+    </ul>
+
+    <h3>get notified!</h3>
+    <p>If you want to be notified when I publish new posts, or when my stories get published,
+        <a href="#">engage</a>.
+    </p>
+</aside>
 
 <footer>
     <a href="mailto:josh@josh.earth">josh@josh.earth</a>
