--- a/resources/post.html
+++ b/resources/post.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<img id="logo" src="../sign.small.png">
+
 <header></header>
 
 <aside>
@@ -16,7 +18,7 @@
     </p>
 </aside>
 
-<article></article>
+<main></main>
 
 <footer></footer>
 
