update the title

--- a/resources/index.html
+++ b/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Lab. Humorous Sci-fi Writings by Josh Marinacci</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
