remove nested path

--- a/resources/post.html
+++ b/resources/post.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-<img id="logo" src="../sign.small.png">
+<img id="logo" src="sign.small.png">
 
 <header></header>
 
