style fixes added new post

--- a/resources/index.html
+++ b/resources/index.html
@@ -17,7 +17,7 @@
         <a href="#">please subscribe</a>.
     </p>
     <ul>
-        <li><a href="./2019-08-13/bio.html">About Me</a></li>
+        <li><a href="2019-08-13_bio.html">About Me</a></li>
     </ul>
 </aside>
 
