--- a/resources/header.html
+++ b/resources/header.html
@@ -1,4 +1,4 @@
 <header>
-    <h1 class="title">The Lab</h1>
-    <h2 class="subtitle">experimental sci-fi humorist writings</h2>
+    <h1 class="title"><a href="index.html">The Lab</a></h1>
+    <h2 class="subtitle"><a href="index.html">experimental sci-fi humorist writings</a></h2>
 </header>
