style fixes added new post

--- a/resources/index.html
+++ b/resources/index.html
@@ -7,18 +7,21 @@
 </head>
 <body>
 
-<img id="logo" src="./sign.small.png">
+<img id="logo" src="sign.small.png">
 
 <header></header>
 
-<aside>
-    <h3>get notified!</h3>
-    <p>If you want to be notified when I publish new posts, or when my stories get published,
-        <a href="#">please subscribe</a>.
-    </p>
+
+<aside class="left">
+    <h3>Exposition</h3>
     <ul>
         <li><a href="2019-08-13_bio.html">About Me</a></li>
     </ul>
+</aside>
+
+<aside class="right">
+    <h3>Get Free Stories</h3>
+    <p><a href="#">Subscribe to my newsletter</a> to get new original stories for free.</p>
 </aside>
 
 <main></main>
