--- a/resources/testpage.html
+++ b/resources/testpage.html
@@ -14,6 +14,15 @@
     <h2 class="subtitle">experimental sci-fi humorist writings</h2>
 </header>
 
+<aside class="left">
+    <h3>Info</h3>
+    <ul>
+        <li>
+            <a href="about.html">About Me</a>
+        </li>
+    </ul>
+</aside>
+
 <main>
 <article>
     <h3>Day One</h3>
@@ -68,15 +77,7 @@ may rise and fall due to random factors beyond our control, but we will construc
 </article>
 </main>
 
-
-<aside>
-    <h3>Info</h3>
-    <ul>
-        <li>
-            <a href="about.html">About Me</a>
-        </li>
-    </ul>
-
+<aside class="right">
     <h3>get notified!</h3>
     <p>If you want to be notified when I publish new posts, or when my stories get published,
         <a href="#">engage</a>.
