--- a/resources/footer.html
+++ b/resources/footer.html
@@ -1,4 +1,3 @@
 <footer>
-    this is a footer
-    <a href="mailto:josh@josh.earth">josh@josh.earth</a>
+    <p>Contact me at <a href="mailto:josh@josh.earth">josh@josh.earth</a></p>
 </footer>
