--- a/resources/index.html
+++ b/resources/index.html
@@ -37,7 +37,7 @@
 
 <aside class="right">
     <h3>Get Free Stories</h3>
-    <p><a href="#">Subscribe to my newsletter</a> to get new original stories for free.</p>
+    <p><a href="https://mailchi.mp/156d43a560f9/enterthelab">Subscribe to my newsletter</a> to get writing news and a free short story.</p>
 </aside>
 
 <main></main>
