add rejection count

--- a/resources/index.html
+++ b/resources/index.html
@@ -32,6 +32,7 @@
     <h3>Exposition</h3>
     <ul>
         <li><a href="2019-08-13_bio.html">About Me</a></li>
+        <li>rejection count: <span class="big">2</span></li>
     </ul>
 </aside>
 
