redo the CSS completely

--- a/resources/post.html
+++ b/resources/post.html
@@ -27,19 +27,9 @@
 
 <header></header>
 
-<aside class="left">
-    <h3>Exposition</h3>
-    <ul>
-        <li><a href="2019-08-13_bio.html">About Me</a></li>
-    </ul>
-</aside>
+<aside></aside>
 
-<aside class="right">
-    <h3>Get Free Stories</h3>
-    <p><a href="https://mailchi.mp/156d43a560f9/enterthelab">Subscribe to my newsletter</a> to get writing news and a free short story.</p>
-</aside>
-
-<main></main>
+<main><article></article></main>
 
 <footer></footer>
 
