--- a/resources/gridtest.html
+++ b/resources/gridtest.html
@@ -7,21 +7,24 @@
         body {
             display: grid;
             grid-template-columns: repeat(3, 100px);
-            grid-auto-rows: 100px;
+            grid-template-rows: 200px 500px 100px;
+            grid-gap: 10px;
         }
 
         p {
             border:1px solid red;
+        }
+
+        .long {
+            background-color: yellow;
+            height: 150px;
         }
     </style>
 </head>
 <body>
 
 <p>foo</p>
-<p>
-    foo really long text that is really supper doooper long
-    foo really long text that is really supper doooper long
-</p>
+<p class="long">big</p>
 <p>foo</p>
 <p>foo</p>
 <p>foo</p>
@@ -30,5 +33,6 @@
 <p>foo</p>
 <p>foo</p>
 <p>foo</p>
+
 </body>
 </html>
