--- a/resources/index.html
+++ b/resources/index.html
@@ -27,19 +27,7 @@
 
 <header></header>
 
-
-<aside class="left">
-    <h3>Exposition</h3>
-    <ul>
-        <li><a href="2019-08-13_bio.html">About Me</a></li>
-        <li>rejection count: <span class="big">2</span></li>
-    </ul>
-</aside>
-
-<aside class="right">
-    <h3>Get Free Stories</h3>
-    <p><a href="https://mailchi.mp/156d43a560f9/enterthelab">Subscribe to my newsletter</a> to get writing news and a free short story.</p>
-</aside>
+<aside></aside>
 
 <main></main>
 
