--- a/resources/aside.html
+++ b/resources/aside.html
@@ -3,13 +3,14 @@
         <h3>Exposition</h3>
         <ul>
             <li><a href="2019-08-13_bio.html">About Me</a></li>
-            <li>rejection count: <span class="big">2</span></li>
+            <li>rejection count: <span class="big">6</span></li>
+            <li>published count: <span class="big">2</span></li>
         </ul>
     </div>
 
 
     <div class="panel">
         <h3>Get Free Stories</h3>
-        <p><a href="https://mailchi.mp/156d43a560f9/enterthelab">Subscribe to my newsletter</a> to get writing news and a free short story.</p>
+        <p><a href="https://tinyletter.com/josh_writes">Subscribe for low volume news and free stories.</a></p>
     </div>
 </aside>
