--- a/resources/post.html
+++ b/resources/post.html
@@ -29,7 +29,9 @@
 
 <aside></aside>
 
-<main><article></article></main>
+<main><article></article>
+    <p>Like this story? Sign up for my <a href="https://tinyletter.com/josh_writes">low volume newsletter</a> for more free ones.</p>
+</main>
 
 <footer></footer>
 
