update css style improve blurb

--- a/resources/post.html
+++ b/resources/post.html
@@ -30,7 +30,10 @@
 <aside></aside>
 
 <main><article></article>
-    <p>Like this story? Sign up for my <a href="https://tinyletter.com/josh_writes">low volume newsletter</a> for more free ones.</p>
+    <div class="bottom-signup">
+        <h3>Like this story?</h3>
+        Sign up for my <a href="https://tinyletter.com/josh_writes">low volume newsletter</a> for more free ones.
+    </div>
 </main>
 
 <footer></footer>
