remove extra header

--- a/resources/header.html
+++ b/resources/header.html
@@ -1,4 +1,4 @@
 <header>
     <h1 class="title"><a href="index.html">The Lab</a></h1>
-    <h2 class="subtitle"><a href="index.html">experimental sci-fi humor</a></h2>
+    <h2 class="subtitle"><a href="index.html">experimental sci-fi humor, horror, and prose.</a></h2>
 </header>
